--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <main>
             <canvas id='eden'>Canvas not supported</canvas>
             <canvas id='score-bar'>Canvas not supported</canvas>
+            <div id="body-border"></div>
         </main>
         <script type='text/javascript' src='script.js'></script>
     </body>
