--- a/index.html
+++ b/index.html
@@ -6,43 +6,56 @@
     </head>
     <body>
         <aside>
-            <input type='button' id='settings' value="o" onclick="show_options()">
+            <input type='button' id='settings' value="Settings" onclick="show_options()">
         </aside>
         <section id='menu-bar'>
             <span>Skins</span>
             <br>
-            <label for='snake-skin' id='snake'>Snake</label>
-            <input type='text' id='snake-skin' value="">
+                <label for='snake-skin' id='snake'>Snake</label>
+                <input type='text' id='snake-skin' value="">
             <br>
-            <label for='head-skin'  id='head' >Head</label>
-            <input type='text' id='head-skin' value="">
+                <label for='head-skin'  id='head' >Head</label>
+                <input type='text' id='head-skin' value="">
             <br>
-            <label for='apple-skin' id='apple'>Apple</label>
-            <input type='text' id='apple-skin' value="">
+                <label for='apple-skin' id='apple'>Apple</label>
+                <input type='text' id='apple-skin' value="">
             <br>
-            <label for='board-skin'  id='board' >Board</label>
-            <input type='text' id='board-skin' value="">
+                <label for='board-skin'  id='board' >Board</label>
+                <input type='text' id='board-skin' value="">
             <br>
-            <label for='score-skin'  id='score' >Score</label>
-            <input type='text' id='score-skin' value="">
+                <label for='score-skin'  id='score' >Score</label>
+                <input type='text' id='score-skin' value="">
+            <br>
+            <hr style="margin: 5% 0 5% 0; width:85%;">
+                <div>
+                    <input type='checkbox' id='fill'>
+                    <label for='fill' id='border-label'>Fill</label>
+                </div>
             <hr style="margin: 5% 0 5% 0; width:85%;">
             <span>Gameplay</span>
             <br>
-            <input type='checkbox' id='border'>
-            <label for='border'    id='border-label'>Border</label>
+                <div>
+                    <input type='checkbox' id='border'>
+                    <label for='border'    id='border-label'>Border</label>
+                </div>
             <br>
-            <input type='checkbox' id='masochist'>
-            <label for='masochist' id='masochist-label' >Self Eater</label>
+                <div>
+                    <input type='checkbox' id='masochist'>
+                    <label for='masochist' id='masochist-label' >Self Eater</label>
+                </div>
             <br>
-            <input type='checkbox' id='fastest'>
-            <label for='fastest' id='fastest-label' >The fastest snake in the west</label>
+                <div>
+                    <input type='checkbox' id='fastest'>
+                    <label for='fastest' id='fastest-label' >The fastest snake in the west</label>
+                </div>
             <br>
-            <input type='checkbox' id='infinite'>
-            <label for='infinite' id='infinite-label' >Infinite ?</label>
+                <div>
+                    <input type='checkbox' id='infinite'>
+                    <label for='infinite' id='infinite-label' >Infinite ?</label>
+                </div>
             <br>
-            <input type='button' id='save' value='save' onclick='save_and_go()'>
-            <input type='button' id='default' value='default' onclick='reset_values()'>
-
+                <input type='button' id='save' value='save' onclick='save_and_go()'>
+                <input type='button' id='default' value='default' onclick='reset_values()'>
         </section>
         <main>
             <canvas id='eden'>Canvas not supported</canvas>
