--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html>
     <head>
         <meta charset='utf-8'>
+        <title>Snake - Press F11</title>
         <link rel='stylesheet' type='text/css' href='style.css'>
     </head>
     <body>
         <aside>
-            <input type='button' id='settings' value="Settings" onclick="show_options()">
+            <input type="image" id='settings' src="zebatka.png" width="35vw" height="35vw" onclick="show_options()">
+            <img src="eater.png" width="35wv" height="35vw" style="margin-left: 35px;" id='eater'>
+            <img src="speed.png" width="35wv" height="35vw" id='speed'>
+            <img src="inf.png"   width="35wv" height="35vw" id='inf'>
         </aside>
         <section id='menu-bar'>
             <span>Skins</span>
